--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwind-colors": "^1.1.0"
+    "tailwind-colors": "^1.1.0",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
