--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
     "axios": "^1.1.3",
+    "cheerio": "^1.0.0-rc.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6",
     "tailwind-colors": "^1.1.0",
-    "usehooks-ts": "^2.9.1"
+    "usehooks-ts": "^2.9.1",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
